<resources>
    <string name="app_name">GitHubTraininAppKotlin</string>

    <string name="username_string">Email address</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>

    <string name="bioString">Bio</string>
    <string name="indication_text">Here will be the owner\'s bio</string>
    <string name="locationTitle">Location</string>
    <string name="emailTitle">Email</string>
    <string name="createdTitle">Account created at:</string>
    <string name="updateTitle">Last update:</string>
    <string name="publicReposTitle">Public repos</string>
    <string name="privateReposTitle">Private repos</string>
    <string name="viewRepositories">View Repositories</string>
    <string name="contact_by_email">Contact by email</string>
    <string name="locationString">Bucharest</string>
    <string name="emailString">blabla@blabla.com</string>
    <string name="dateString">date</string>
    <string name="numberString">No</string>
    <string name="repository_s_name">Repository\'s name:</string>
    <string name="repositories_list_title">Repositories list</string>
    <string name="created_title">Created:</string>
    <string name="updated_title">Updated:</string>
    <string name="logout">Logout</string>
    <string name="sort_by_title">Sort by:</string>
    <string name="created_date">Created</string>
    <string name="updated_date">Updated</string>
    <string name="pushed_date">Pushed</string>
    <string name="full_name">Full Name</string>
    <string name="affiliation_title">Affiliation:</string>
    <string name="owner">Owner</string>
    <string name="collaborator">Collaborator</string>
    <string name="org_member">Organization Member</string>
    <string name="github_settings">GitHub Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pushed_title">Pushed at:</string>
    <string name="private_title">Private</string>
    <string name="public_title">Public</string>
    <string name="repository_s_full_name">Full Name</string>
    <string name="error_string">No internet connection</string>

    <!--Args strings-->
    <string name="created_at_string">created_at</string>
    <string name="updated_at_string">updated_at</string>
</resources>
