<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/sort_by_title">
<menu>
        <item
            android:id="@+id/created_action"
            android:title="@string/created_date"
            android:checkable="true"/>
        <item
            android:id="@+id/updated_action"
            android:title="@string/updated_date"
            android:checkable="true"/>
        <item
            android:id="@+id/pushed_action"
            android:title="@string/pushed_date"
            android:checkable="true"/>
        <item
            android:id="@+id/full_name_action"
            android:title="@string/full_name"
            android:checkable="true"/>
</menu>
    </item>

    <item
        android:title="@string/affiliation_title" >
    <menu>
        <item
            android:id="@+id/owner_action"
            android:title="@string/owner"
            android:checkable="true"/>
        <item
            android:id="@+id/collaborator_action"
            android:title="@string/collaborator"
            android:checkable="true"/>
        <item
            android:id="@+id/organization_action"
            android:title="@string/org_member"
            android:checkable="true"/>

    </menu>
    </item>
</menu>