<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context=".repoDetails.RepoDetailsFragment">
    <data>
        <variable
                name="repoDetails"
                type="com.example.githubtraininappkotlin.repoDetails.RepoDetailsViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/eight_dp"
                android:text="@string/repository_s_name"/>
        <TextView
                android:id="@+id/repo_name"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/repo_full_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/eight_dp"
                android:text="@string/repository_s_full_name"/>
        <TextView
                android:id="@+id/repo_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/created_title"
                android:layout_margin="@dimen/eight_dp"/>
        <TextView
                android:id="@+id/repo_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/updated_title"
                android:layout_margin="@dimen/eight_dp"/>
        <TextView
                android:id="@+id/repo_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"/>

        <TextView
                android:id="@+id/pushed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pushed_title"
                android:layout_margin="@dimen/eight_dp"/>
        <TextView
                android:id="@+id/repo_pushed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"/>
    <TextView
            android:id="@+id/repo_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="@dimen/eight_dp"/>
    </LinearLayout>
</layout>