<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="repo"
                type="com.example.githubtraininappkotlin.models.GithubRepoEntity"/>
        <variable name="clickListener"
                  type="com.example.githubtraininappkotlin.repos.GithubRepoEntityListener"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp"
            android:onClick="@{() -> clickListener.onClick(repo)}">
        <LinearLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/repository_s_name"/>
            <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:repoName="@{repo}"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/created_title"/>
            <TextView
                    android:id="@+id/repo_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:repoCreated="@{repo}"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/updated_title"/>
            <TextView
                    android:id="@+id/repo_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            app:repoUpdated="@{repo}"/>

        </LinearLayout>
        <TextView
                android:id="@+id/repo_privacy"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_gravity="center"
                app:repoPrivacy="@{repo}"/>
    </LinearLayout>
</layout>